name:           meshview
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/githubuser/meshview#readme>
homepage:       https://github.com/githubuser/meshview#readme
bug-reports:    https://github.com/githubuser/meshview/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ksaveljev/meshview

executable meshview
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , GLFW-b >= 1.4 && < 1.5
  other-modules:
      Paths_meshview
  default-language: Haskell2010
