name:           meshview
version:        0.1.0.0
synopsis:       Performant 3D mesh viewer
description:    Please see the README on Github at <https://github.com/githubuser/meshview#readme>
homepage:       https://github.com/ksaveljev/meshview#readme
bug-reports:    https://github.com/ksaveljev/meshview/issues
author:         Konstantin Saveljev
copyright:      2018 Michael Fogleman, Konstantin Saveljev
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ksaveljev/meshview

executable meshview
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -O0 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , GLFW-b >= 1.4 && < 1.5
    , OpenGL >= 3.0 && < 3.1
  other-modules:
      Paths_meshview
    , Util.GLFW
  default-language: Haskell2010
